--- a/thule-discovery-service/src/main/resources/config/application-itest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-itest.yml
@@ -1,3 +1,12 @@
+# Eureka configuration
+eureka:
+  client:
+    fetch-registry: true
+    registerWithEureka: true # Register discovery service itself with Eureka so we have a client service available for the integration tests
+  instance:
+    # By default eureka server can take a long time to start due to the default lease renewal of 30 seconds
+    leaseRenewalIntervalInSeconds: 5
+
 # Spring logging configuration
 logging:
   level:
@@ -6,8 +15,3 @@ logging:
 # Spring server configuration
 server:
   port: 8761
-
-# Thule configuration
-thule:
-  discoveryservice:
-    host: localhost
