--- a/thule-discovery-service/src/ctest/docker/thule-discovery-service-container-tests/docker-compose.yml
+++ b/thule-discovery-service/src/ctest/docker/thule-discovery-service-container-tests/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   thule-discovery-service:
     image: thule-discovery-service
     environment:
-      EUREKA_INSTANCE_HOSTNAME: 172.17.0.1 # Docker bridge IP address
-      EUREKA_INSTANCE_NONSECUREPORT: 8761
+      EUREKA_CLIENT_REGISTER_WITH_EUREKA: "true" # Register discovery service itself with Eureka so we have a client service available for the container tests
+      EUREKA_INSTANCE_HOSTNAME: 172.17.0.1 # Set hostname so that the container tests can reach the discovery-service as a 'target' micro-service
+      EUREKA_INSTANCE_LEASE_RENEWAL_INTERVAL_IN_SECONDS: 5 # By default eureka server can take a long time to start due to the default lease renewal of 30 seconds
+      EUREKA_INSTANCE_NON_SECURE_PORT: 8761 # Set port so that the container tests can reach the discovery-service as a 'target' micro-service
       LOGGING_LEVEL_COM_GOHENRY: trace
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_CONFIG_FAILFAST: "false"
-      THULE_DISCOVERYSERVICE_HOST: 172.17.0.1 # Docker bridge IP address
-      THULE_DISCOVERYSERVICE_PORT: 8761
       TZ: Europe/London
     ports:
       - 8761:8080
