Whoops, fixed regression bug

--- a/thule-discovery-service/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ctest.yml
@@ -11,7 +11,7 @@ logging:
   level:
     uk.co.serin: trace
 
-# GoHenry configuration
+# Thule configuration
 thule:
   discoveryservice:
     host: 172.17.0.1 # Docker bridge IP address
