--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -38,5 +38,5 @@ thule:
   shared:
     logging:
       logstash:
+        enabled: true
         host: 172.17.0.1 # Docker bridge IP address
-        port: 5400
