--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -20,11 +20,7 @@ info:
 logging:
   level:
     org.springframework: info
-    uk.co.serin: trace
-
-# Spring server configuration
-server:
-  port: 8080
+    uk.co.serin: info
 
 # Spring boot configuration
 spring:
@@ -39,5 +35,5 @@ thule:
   shared:
     logging:
       logstash:
+        enabled: true
         host: 172.17.0.1 # Docker bridge IP address
-        port: 5400
