Refactored spring default config so that it is closely aligned to a docker environment

--- a/thule-discovery-service/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ctest.yml
@@ -4,7 +4,7 @@ eureka:
     fetch-registry: true
     serviceUrl:
       # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
-      defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8761}/eureka/
+      defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8080}/eureka/
 
 # Spring logging configuration
 logging:
@@ -15,3 +15,4 @@ logging:
 thule:
   discoveryservice:
     host: 172.17.0.1 # Docker bridge IP address
+    port: 8761
