--- a/thule-people-service/src/ctest/docker/thule-people-service-container-tests/docker-compose.yml
+++ b/thule-people-service/src/ctest/docker/thule-people-service-container-tests/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       LOGGING_LEVEL_UK_CO_SERIN: trace
       SPRING_CLOUD_BOOTSTRAP_ENABLED: "false" # Disable spring cloud features such as config server and service discovery
       SPRING_FLYWAY_BASELINE-ON-MIGRATE: "true" # Allow for case where the schema exists but Flyway did not create it
-      THULE_PEOPLESERVICE_MYSQL_HOST: mysql-host
+      THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       TZ: Europe/London
     ports:
       - 8090:8080
@@ -20,9 +20,5 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       TZ: UTC
-    networks:
-      default:
-        aliases:
-          - mysql-host
     ports:
       - 3307:3306 # Required to allow container tests to test that the database has been written to when testing the api
