--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
+        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
 }
@@ -24,7 +24,6 @@ apply from: "${rootDir}/../gradle/build-config.gradle"
 configurations {
     ctestCompile {
         extendsFrom testCompile
-        exclude group: "org.springframework.cloud", module: "spring-cloud-starter-config"
         exclude group: "org.springframework.cloud", module: "spring-cloud-starter-netflix-eureka-server"
     }
 }
@@ -56,5 +55,6 @@ dependencies {
     itestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
 
     ctestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+    // Include the eureka client because the eureka-server, which includes the eureka-client, has been excluded (see above)
     ctestCompile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 }
