--- a/thule-discovery-service/src/ctest/docker/thule-discovery-service-container-tests/docker-compose.yml
+++ b/thule-discovery-service/src/ctest/docker/thule-discovery-service-container-tests/docker-compose.yml
@@ -9,8 +9,7 @@ services:
       EUREKA_INSTANCE_LEASE_RENEWAL_INTERVAL_IN_SECONDS: 5 # By default eureka server can take a long time to start due to the default lease renewal of 30 seconds
       EUREKA_INSTANCE_NON_SECURE_PORT: 8761 # Set port so that the container tests can reach the discovery-service as a 'target' micro-service
       LOGGING_LEVEL_UK_CO_SERIN_THULE: trace
-      SPRING_CLOUD_CONFIG_ENABLED: "false"
-      SPRING_CLOUD_CONFIG_FAILFAST: "false"
+      SPRING_CLOUD_CONFIG_ENABLED: "false" # Standalone container tests do not need a config server
       TZ: Europe/London
     ports:
       - 8761:8080
