--- a/thule-config-service/build.gradle
+++ b/thule-config-service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
+        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
 }
@@ -73,9 +73,6 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
-
-    // Required to retry connecting to the discovery server when it is not available at startup
-    itestCompile("org.springframework.retry:spring-retry")
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 }
