--- a/thule-config-service/src/ctest/docker/thule-config-service-container-tests/docker-compose.yml
+++ b/thule-config-service/src/ctest/docker/thule-config-service-container-tests/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   thule-config-service:
     image: thule-config-service
     environment:
-      EUREKA_CLIENT_ENABLED: "false"
+      EUREKA_CLIENT_ENABLED: "false" # Standalone container tests do not need a discovery service
+      LOGGING_LEVEL_UK_CO_SERIN: trace
       TZ: Europe/London
     ports:
-      - 8888:8080
+      - 8888:8080 # Required to allow container tests to call the restful api
