--- a/thule-config-service/src/main/resources/config/application.yml
+++ b/thule-config-service/src/main/resources/config/application.yml
@@ -1,3 +1,13 @@
+# Eureka configuration
+eureka:
+  client:
+    serviceUrl:
+      # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
+      defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8080}/eureka/
+  instance:
+    # Hostname will be the docker container hostname by default which will not will not be accessible outside of the host itself, so use ipaddress instead
+    prefer-ip-address: true
+
 # Spring actuator configuration
 info:
   description: Thule Config Service
@@ -7,7 +17,7 @@ info:
 logging:
   level:
     org.springframework: info
-    uk.co.serin: trace
+    uk.co.serin: info
 
 # Spring boot configuration
 spring:
