--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -43,7 +43,7 @@ spring:
       roles: USER,ADMIN
   sleuth:
     sampler:
-      probability: 1.0 # 1.0 = 100%
+      probability: 1.0
   zipkin:
     baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
     sender:
