--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext["hibernate.version"] = "5.2.12.Final" // Override spring boot defined version 5.2.14.Final which contains a bug whereby Oracle integration tests fail with a AbstractMethodError
 
     repositories {
-        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
+        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
 }
