--- a/thule-people-service/settings.gradle
+++ b/thule-people-service/settings.gradle
@@ -1,5 +1,5 @@
 pluginManagement {
     repositories {
-        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
+        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
     }
 }
