--- a/thule-people-service/src/ctest/docker/thule-people-service-container-tests/docker-compose.yml
+++ b/thule-people-service/src/ctest/docker/thule-people-service-container-tests/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     environment:
       EUREKA_CLIENT_ENABLED: "false" # Standalone container tests do not need a discovery service
       LOGGING_LEVEL_UK_CO_SERIN: trace
-      SPRING_CLOUD_BOOTSTRAP_ENABLED: "false" # Disable spring cloud features such as config server and service discovery
+      SPRING_CLOUD_CONFIG_ENABLED: "false" # Standalone container tests do not need a config server
       SPRING_FLYWAY_BASELINE-ON-MIGRATE: "true" # Allow for case where the schema exists but Flyway did not create it
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       TZ: Europe/London
     ports:
-      - 8090:8080
+      - 8091:8080 # Required to allow container tests to call the restful api
     restart: always # Spring context will fail to initialize if MySql is not ready because Flyway is dependent upon its availability
 
   ################################  Servers and Databases Required By Container Tests  ################################
@@ -21,4 +21,4 @@ services:
       MYSQL_ROOT_PASSWORD: root
       TZ: UTC
     ports:
-      - 3307:3306 # Required to allow container tests to test that the database has been written to when testing the api
+      - 3308:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
