--- a/thule-people-service/src/itest/docker/thule-people-service-integration-tests/docker-compose-mysql.yml
+++ b/thule-people-service/src/itest/docker/thule-people-service-integration-tests/docker-compose-mysql.yml
@@ -7,5 +7,5 @@ services:
       MYSQL_ROOT_PASSWORD: root
       TZ: Europe/London
     ports:
-      - 3307:3306
+      - 3307:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
     restart: always
