--- a/thule-people-service/src/main/resources/bootstrap.yml
+++ b/thule-people-service/src/main/resources/bootstrap.yml
@@ -1,12 +1,11 @@
 # Spring cloud config client configuration
 spring:
   application:
-    # Required by the discovery service as the key to enable other services to lookup and access this service
     name: thule-people-service
   cloud:
     config:
       # Must set this to true when attempting retry otherwise it will not retry connecting to the config server if not available at startup
-      failfast: true
+      failFast: true
       # When to retry accessing the config service if it not available at startup
       retry:
         maxAttempts: 9999
