--- a/thule-config-service/src/main/resources/config/application-ctest.yml
+++ b/thule-config-service/src/main/resources/config/application-ctest.yml
@@ -7,3 +7,12 @@ eureka:
 logging:
   level:
     uk.co.serin: trace
+
+# Spring boot configuration
+
+# Thule configuration
+thule:
+  configservice:
+    api:
+      host: 172.17.0.1 # Docker bridge IP address
+      port: 9888
