Refactoring of spring config

--- a/thule-edge-server/build.gradle
+++ b/thule-edge-server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
+        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
 }
@@ -35,8 +35,10 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
-    // Required to retry connecting to the discovery server when it is not available at startup
-    compile("org.springframework.retry:spring-retry")
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+
+    itestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+
+    ctestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
 }
