Refactoring of spring config

--- a/thule-cloud/src/ctest/docker/thule-cloud-container-tests/docker-compose.yml
+++ b/thule-cloud/src/ctest/docker/thule-cloud-container-tests/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       THULE_CONFIGSERVICE_PORT: 8080
       THULE_DISCOVERYSERVICE_HOST: thule-discovery-service
       THULE_DISCOVERYSERVICE_PORT: 8080
+      THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       TZ: Europe/London
     ports:
       - 9093:8080
