Refactoring of spring config

--- a/thule-people-service/src/main/resources/config/application-dev.yml
+++ b/thule-people-service/src/main/resources/config/application-dev.yml
@@ -16,3 +16,6 @@ spring:
 thule:
   discoveryservice:
     port: 8761
+  peopleservice:
+    mysql:
+      host: 172.17.0.1 # Docker bridge IP address
