--- a/thule-admin-server/build.gradle
+++ b/thule-admin-server/build.gradle
@@ -12,28 +12,27 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.6.2"
-    id "org.springframework.boot" version "1.5.10.RELEASE"
+    id "org.springframework.boot" version "2.0.2.RELEASE"
 }
 apply plugin: "io.spring.dependency-management"
 
 // Standard Serin gradle plugin config
-apply from: "${rootDir}/../gradle/build-config-with-spring-boot-1.5.x-config.gradle"
+apply from: "${rootDir}/../gradle/build-config.gradle"
 
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1")
     }
 }
 
 dependencies {
     compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
-    compile("de.codecentric:spring-boot-admin-server:1.5.7")
-    compile("de.codecentric:spring-boot-admin-server-ui:1.5.7")
+    compile("de.codecentric:spring-boot-admin-starter-server:2.0.0")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-config")
-    compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
     // Required to retry connecting to the discovery server when it is not available at startup
