Refactored logging config (removed most of it)

--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -20,7 +20,7 @@ info:
 logging:
   level:
     org.springframework: info
-    uk.co.serin: info
+    uk.co.serin: trace
 
 # Spring boot configuration
 spring:
