--- a/thule-configuration-service/src/main/resources/config/application.yml
+++ b/thule-configuration-service/src/main/resources/config/application.yml
@@ -17,7 +17,7 @@ info:
 logging:
   level:
     org.springframework: info
-    uk.co.serin: info
+    uk.co.serin: trace
 
 # Spring boot configuration
 spring:
