Refactoring of spring config

--- a/thule-admin-server/src/main/resources/config/application-ctest.yml
+++ b/thule-admin-server/src/main/resources/config/application-ctest.yml
@@ -7,5 +7,5 @@ eureka:
 thule:
   adminserver:
     api:
-      host: 172.17.0.1 # Docker bridge IP address
+      host: localhost
       port: 9092
