--- a/thule-discovery-service/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ctest.yml
@@ -9,5 +9,5 @@ eureka:
 # Thule configuration
 thule:
   discoveryservice:
-    host: 172.17.0.1 # Docker bridge IP address
+    host: localhost
     port: 9761
