--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -27,8 +27,6 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
-  zipkin:
-    baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
 # Thule configuration
 thule:
@@ -36,4 +34,4 @@ thule:
     logging:
       logstash:
         enabled: true
-        host: 172.17.0.1 # Docker bridge IP address
+        host: localhost
