--- a/thule-edge-server/src/main/resources/config/application.yml
+++ b/thule-edge-server/src/main/resources/config/application.yml
@@ -26,8 +26,6 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
-  zipkin:
-    baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
 # Zuul configuration
 zuul:
@@ -41,4 +39,4 @@ thule:
     logging:
       logstash:
         enabled: true
-        host: 172.17.0.1 # Docker bridge IP address
+        host: localhost
