--- a/thule-people-service/src/main/resources/config/application-ctest.yml
+++ b/thule-people-service/src/main/resources/config/application-ctest.yml
@@ -14,8 +14,8 @@ spring:
 thule:
   peopleservice:
     api:
-      host: 172.17.0.1 # Docker bridge IP address
+      host: localhost
       port: 9093
     mysql:
-      host: 172.17.0.1 # Docker bridge IP address
+      host: localhost
       port: 3308 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
