--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -7,7 +7,7 @@ eureka:
 thule:
   peopleservice:
     mysql:
-      host: 172.17.0.1 # Docker bridge IP address
+      host: localhost
       port: 3307 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
 
 ######################################### NESTED INTEGRATION TEST PROFILES #######################################
