--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -45,10 +45,6 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
-  zipkin:
-    baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
-    sender:
-      type: web
 
 # Thule configuration
 thule:
@@ -56,4 +52,4 @@ thule:
     logging:
       logstash:
         enabled: true
-        host: 172.17.0.1 # Docker bridge IP address
+        host: localhost
