Refactoring of spring config

--- a/thule-admin-server/src/main/resources/bootstrap.yml
+++ b/thule-admin-server/src/main/resources/bootstrap.yml
@@ -4,6 +4,7 @@ spring:
     name: thule-admin-server
   cloud:
     config:
+      enabled: false
       # Must set this to true when attempting retry otherwise it will not retry connecting to the config server if not available at startup
       failFast: true
       # When to retry accessing the config service if it not available at startup
