--- a/thule-edge-server/src/main/resources/bootstrap-cit.yml
+++ b/thule-edge-server/src/main/resources/bootstrap-cit.yml
@@ -3,3 +3,9 @@ spring:
   cloud:
     config:
       enabled: true
+
+# Thule configuration
+thule:
+  configurationservice:
+    host: thule-configuration-service
+    port: 8080
