--- a/thule-edge-server/src/main/resources/config/application.yml
+++ b/thule-edge-server/src/main/resources/config/application.yml
@@ -1,6 +1,7 @@
 # Eureka configuration
 eureka:
   client:
+    enabled: false
     serviceUrl:
       # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
       defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8080}/eureka/
