--- a/thule-edge-server/src/main/resources/config/application-dev.yml
+++ b/thule-edge-server/src/main/resources/config/application-dev.yml
@@ -1,8 +1,11 @@
+# Eureka configuration
+eureka:
+  client:
+    enabled: true
+
 # Spring server configuration
 server:
   port: 8091
-
-# Spring boot configuration
 
 # Thule configuration
 thule:
